...
            "value" : "Benutzerkonto"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Account Overview"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resumen de la Cuenta"
...
            "value" : "Dein Benutzerkonto"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tu Cuenta"
...
            "state" : "translated",
            "value" : "Lägg till datum"
          }
        }
      }
    },
    "Add Date of Birth" : {
      "comment" : "A button label that prompts the user to add a date of birth.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Anonym användare"
          }
        }
      }
    },
    "Cancel" : {
      "comment" : "A button that dismisses the confirmation alert.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Byt lösenord"
          }
        }
      }
    },
    "Close" : {
      "comment" : "A label for a button that dismisses a view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Weiter Bearbeiten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keep Editing"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar Editando"
...
            "state" : "translated",
            "value" : "Radera konto"
          }
        }
      }
    },
    "Done" : {
      "comment" : "A label describing the action of saving changes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Complete"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Completar"
...
            "value" : "Bitte fülle die folgenden Informationen aus, um dein Benutzerkonto zu vervollständigen."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please fill out the details below to complete your account setup."
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Por favor, rellena los detalles a continuación para completar la configuración de tu cuenta."
...
            "value" : "Account Vervollständigen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finish Account Setup"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finalizar Configuración de Cuenta"
...
    },
    "NAME" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "value" : "oder"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "or"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "o"
...
            "value" : "Anmeldung & Sicherheit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign-In & Security"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio de Sesión y Seguridad"
...
            "value" : "Ein Link zum Zurücksetzen das Passworts wurde versandt."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sent out a link to reset the password."
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Se ha enviado un enlace para restablecer la contraseña."
...
            "value" : "Geburtsdatum"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Date of Birth"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fecha de Nacimiento"
...
            "value" : "Password vergessen?"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Forgot Password?"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¿Olvidaste tu contraseña?"
...
            "value" : "Abmelden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logout"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar sesión"
...
            "value" : "Passwort"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contraseña"
...
            "value" : "Passwort Zurücksetzten"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset Password"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restablecer Contraseña"
...
            "value" : "E-Mail Adresse"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "E-Mail Address"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dirección de Correo Electrónico"
...
            "value" : "Lösenorden matchar inte."
          }
        }
      }
    },
    "VALUE_ADD %@" : {
      "comment" : "A button that, when pressed, adds a new entry for a specific account key. The label inside the button is generated from the key's `name`.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ Hinzufügen"
...
