...
}


#Preview {
    List {
        Label {
            Text(verbatim: "Name, E-Mail Address")
        } icon: {
            DetailsSectionIcon()
        }
        Label {
            Text(verbatim: "Sign-In & Security")
        } icon: {
...
